frontend-deployment.yaml
# ============================================================
# FRONTEND DEPLOYMENT + SERVICE
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gympal-frontend
spec:
  replicas: 1
  selector:
    matchLabels: # Determine which label defines the pods that are part of the pool from this Deployment
      app: gympal-frontend
  template:
    metadata:
      labels:
        app: gympal-frontend
    spec:
      imagePullSecrets: # Secret that contains github token for authentication
        - name: ghcr-secret
      containers:
        - name: gympal-frontend
          image: ghcr.io/arnaugg9/gympalfrontend-frontend:latest
          ports:
            - containerPort: 80
          resources: # Resource requests and limits for the container within a Pod
            requests: # Minimum resources required
              cpu: "100m"
              memory: "128Mi"
            limits: # Maximum resources allowed
              cpu: "250m"
              memory: "256Mi"
          # Environment variables for the container whithin a Pod
          # Safe public vars
          envFrom: # Load all vars from a ConfigMap
            - configMapRef:
                name: gympal-config
          # Sensitive public vars
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes: # Mount NGINX config from ConfigMap so that SPA routing works correctly. This overrides the default NGINX config.
        - name: nginx-conf
          configMap:
            name: gympal-config
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: gympal-frontend
spec:
  type: NodePort
  selector:
    app: gympal-frontend # Select pods with label "app: gympal-frontend"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080 # Port to access the service from outside the cluster
